--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,8 +1,8 @@
 :root{
-    --yellow: rgba(255, 202, 39);
-    --blue:rgba(21, 94, 117);
-    --gray:rgba(229, 231, 235);
-    --white:rgba(248, 250, 252);
+    --yellow: #ffc929;
+    --blue:#155e75;
+    --gray:#e5e7eb;
+    --white:#f8fafc;
 
     --shadow:2px 2px 10px rgba(50,50,50,0.1);
     --corners: 5px;
